SERVER-47205 Stopping dropping snapshots after safe reconfig that does not change writeConcernMajorityJournalDefault

(cherry picked from commit a397fc442440984fca2ab37f491759745979ab2d)